tests/compile_fail/declare_scheduler_topology_vs_constraints_max_cpus_below.stderr
error: declare_scheduler!: constraints.max_cpus (Some(4)) is below effective topology total_cpus (8 = llcs * cores * threads); every gauntlet preset would reject this test at runtime and the test would never execute.
  --> tests/compile_fail/declare_scheduler_topology_vs_constraints_max_cpus_below.rs:15:19
   |
15 |         max_cpus: Some(4),
   |                   ^^^^^^^
